hphp/hack/test/typecheck/parent_in_prop_decl.php.exp
ERROR: File "parent_in_prop_decl.php", line 6, characters 26-38:
Expected constant expression for initializer (Parsing[1002])
ERROR: File "parent_in_prop_decl.php", line 7, characters 32-44:
Expected constant expression for initializer (Parsing[1002])
ERROR: File "parent_in_prop_decl.php", line 6, characters 26-31:
parent is undefined (Typing[4076])
ERROR: File "parent_in_prop_decl.php", line 7, characters 32-37:
parent is undefined (Typing[4076])
